--- a/style/hero.css
+++ b/style/hero.css
@@ -1,15 +1,49 @@
 nav {
-  background-image: image("/assets/image/hero-background.png");
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-
   width: 100%;
-  margin: 0 auto;
-  padding: 1.25rem 1.25rem 0 1.25rem;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
 
-  & figure img {
-    max-width: 75%;
+  & section:nth-child(1) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 3rem;
   }
+
+  & section:nth-child(2) {
+    width: 100% ;
+    display: flex;
+    flex-direction: column;    
+
+    & div {
+      
+      
+    }
+
+    h1 {
+      letter-spacing: 0.3rem;
+      margin-bottom: 1.2rem;
+      font: bold 1.75rem var(--font-principal);
+      text-align: center;
+      
+    }
+    p {
+      text-align: center;
+      font: 0.875rem/1.4 var(--font-principal);
+      font-weight: 100;
+    }
+  }
+
+  & section:nth-child(3) {
+    
+  }
+}
+
+nav::after {
+  content: "";
+  position: relative;
+  width: 23.5rem;
+  height: 23.5rem;
+  border-radius: 50%;
 }
