--- a/style/global.css
+++ b/style/global.css
@@ -48,13 +48,16 @@ body {
 }
 
 .button {
-  padding: 1rem;
+  display: flex;
+  align-items: center;
   border-radius: 0.5rem;
   background: var(--pink-dark);
   color: var(--text-title);
 }
+
 .button-secondary {
-  padding: 1rem;
+  display: flex;
+  align-items: center;
   border-radius: 0.5rem;
   background: var(--blue-dark);
   color: var(--text-title);
@@ -66,9 +69,12 @@ body {
 .button:hover {
   background: var(--pink-base);
 }
+.button-sm {
+  padding: 1.25rem;
+  max-height: 2.5rem;
+}
 
 html,
-
 a {
   font-family: inherit;
   text-decoration: none;
@@ -85,4 +91,4 @@ li {
 
 .padding-default {
   padding: 0.25rem 1.25rem 0 1.25rem;
-} 
+}
