--- a/style/hero.css
+++ b/style/hero.css
@@ -12,23 +12,18 @@ nav {
   }
 
   & section:nth-child(2) {
-    width: 100% ;
+    width: 100%;
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
+    border: 1px solid red;
 
-    & div {
-      
-      
-    }
-
-    h1 {
-      letter-spacing: 0.3rem;
+    & h1 {
       margin-bottom: 1.2rem;
-      font: bold 1.75rem var(--font-principal);
+      font: bold 1.75rem / normal var(--font-principal);
       text-align: center;
       
     }
-    p {
+    & p {
       text-align: center;
       font: 0.875rem/1.4 var(--font-principal);
       font-weight: 100;
@@ -36,7 +31,6 @@ nav {
   }
 
   & section:nth-child(3) {
-    
   }
 }
 
