--- a/style/main.css
+++ b/style/main.css
@@ -1,12 +1,39 @@
 main {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 1px solid blue;
 
-    & section:nth-child(1){
-        
-        & img[src*="star"] {
+  & section:nth-child(1) {
+    & div:nth-child(1) {
+      display: flex;
+      align-items: center;
+      flex-direction: row;
 
-        }
+      & img[src*="star"] {
+        width: 100%;
+        max-width: 1.25rem;
+        color: var(--pink-base);
+        margin-inline: 0.75rem;
+        fill: var(--pink-base);
+      }
+
+      & h1 {
+        font-size: 1.5rem;
+      }
+      & p {
+        font: normal 0.875rem/1.4;
+      }
     }
+  }
+
+  & section:nth-child(2) {
+    & img[src*="book"] {
+      width: 100%;
+      max-width: 9.8rem;
+      margin-bottom: 3rem;
+    }
+  }
 }
