--- a/style/hero.css
+++ b/style/hero.css
@@ -2,6 +2,7 @@ nav {
   width: 100%;
   display: flex;
   flex-direction: column;
+  position: relative;
 
   & section:nth-child(1) {
     display: flex;
@@ -70,11 +71,16 @@ nav {
   }
 }
 
-/* nav::after {
-  border: 1px solid ;
+ nav::after {
+  
   content: "";
-  position: relative;
-  width: 23.5rem;
-  height: 23.5rem;
+  top: 100px;
+  right: 0;
   border-radius: 50%;
-} */
+  position:  absolute;
+  width: 500px;
+  height: 500px;
+  background: radial-gradient(circle, rgba(63, 15, 65, 0.50), #000);
+  z-index: -1;
+  
+}
