--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,5 @@
 main {
+  position: relative;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -53,4 +54,15 @@ main {
     border: 1px solid blue;
     transform: rotate(22deg);
   }
+}
+
+main::after {
+  position: absolute;
+  content: "";
+  width: 350px;
+  height: 350px;
+  background-image: radial-gradient(circle, rgba(63,15,65, 0.8), #000);
+  z-index: -1;
+  border-radius: 50%;
+  
 }
