--- a/style/main.css
+++ b/style/main.css
@@ -7,13 +7,11 @@ main {
   flex-direction: column;
 
   & section:nth-child(1) {
-  
     margin-bottom: 4rem;
     & div:nth-child(1) {
       display: flex;
       align-items: center;
       flex-direction: row;
-      
 
       & img[src*="star"] {
         width: 100%;
@@ -32,16 +30,23 @@ main {
     }
   }
 
-  & section:nth-child(2) {
+  & section:nth-child(2) figure {
     display: flex;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
+    flex-direction: row;
+    
+  }
+
+  & img[src*="pin"] {
+    position: relative;
+    max-height:5.3rem ;
+    transform: rotate(-20deg);
+    bottom: -100px;
+    right: -30px;
+    z-index: -1;
   }
   & img[src*="book"] {
-    width: 100%;
-    max-width: 11.25rem;
-    margin-block: 4rem 5.5rem;
+    max-height: 11.75rem;
+    
   }
 
   & img[src*="bookmark"] {
@@ -54,14 +59,14 @@ main {
     transform: rotate(11.72deg);
     z-index: -1;
     top: -50px;
-    right: 35px;
+    right: 18px;
   }
 
   & img[src*="purple"] {
     position: relative;
-    transform: rotate(22deg);
+    transform: rotate(25deg);
     z-index: -2;
-    
+    right: 55px;
   }
 }
 
