--- a/style/hero.css
+++ b/style/hero.css
@@ -74,11 +74,17 @@ nav {
 
 nav::after {
   content: "";
-  bottom: -100px;
-  right: -20px;
+  border-radius: 50%;
+
+  bottom: -20px;
   position: absolute;
-  width: 450px;
-  height: 450px;
-  background: radial-gradient(circle, rgba(63, 15, 65, 0.25), #00050a);
+  width: 270px;
+  height: 250px;
+  background: radial-gradient(
+      circle,
+      rgba(63, 15, 65, 0.5) 100%,
+      rgba(255, 0, 255, 0)
+    )0%;
+  filter: blur(100px);
   z-index: -1;
 }
