--- a/style/global.css
+++ b/style/global.css
@@ -42,7 +42,6 @@ body {
 .container {
   width: 100%;
   max-width: 385px;
-  border: 1px solid red;
   display: flex;
   flex-direction: column;
 }
@@ -91,4 +90,8 @@ li {
 
 .padding-default {
   padding: 0.25rem 1.25rem 0 1.25rem;
+}
+
+.title-li {
+  color: var(--text-body) !important;
 }
