--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,6 @@
 @import url(global.css);
 @import url(hero.css);
 @import url(main.css);
+@import url(price.css);
+@import url(cards.css);
+@import url(footer.css);
