--- a/style/price.css
+++ b/style/price.css
@@ -8,13 +8,19 @@
         display: flex;
         align-content: center;
         align-items: center;
-    
 
         & h1 {
             text-align: center;
             margin-bottom: 3rem;
         }
     }
+
+        .container-cards{
+            
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
 }
 
 
