--- a/style/hero.css
+++ b/style/hero.css
@@ -37,11 +37,13 @@ nav {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-block: 5rem;
+    padding-block: 10rem;
 
     & p {
       position: absolute;
-      font: 1rem / 1.4;
+      font-size: 1rem;
+      font-weight: 100;
+      line-height: 1.4;
       text-align: center;
       align-content: center;
     }
@@ -53,25 +55,22 @@ nav {
       position: relative;
       top: -20px;
       left: 70%;
-      transform: rotate(20deg);
-      animation: spellbook 2s both 100ms;
-    }
-
-    img[src*="spellbook"]:hover {
-      transform: rotate(-20px);
+      transition: transform 750ms ease-in-out;
     }
 
     & img[src*="planchette"] {
       position: relative;
       bottom: -70px;
-      transform: rotate(-25deg);
+      /* transform: rotate(-25deg); */
+      transition: transform 750ms ease-in-out;
     }
 
     & img[src*="crystal"] {
       position: relative;
       right: -85%;
       top: 20px;
-      transform: rotate(20deg);
+      /* transform: rotate(20deg); */
+      transition: transform 750ms ease-in-out;
     }
   }
 }
@@ -93,7 +92,7 @@ nav::after {
   content: "";
   border-radius: 50%;
 
-  bottom: -20px;
+  bottom: 100px;
   position: absolute;
   width: 270px;
   height: 250px;
@@ -105,6 +104,18 @@ nav::after {
     0%;
   filter: blur(100px);
   z-index: -1;
+}
+
+img[src*="spellbook"]:hover {
+  transform: rotate(30deg);
+}
+
+img[src*="crystal"]:hover {
+  transform: rotate(30deg);
+}
+
+img[src*="planchette"]:hover {
+  transform: rotate(-30deg);
 }
 
 @keyframes animation_background {
