--- a/style/main.css
+++ b/style/main.css
@@ -5,30 +5,39 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-bottom: 10rem;
+  margin-block: 6rem;
 
   & section:nth-child(1) {
     margin-bottom: 4rem;
+
+
     & div:nth-child(1) {
       display: flex;
       align-items: center;
       flex-direction: row;
 
       & img[src*="star"] {
-        width: 100%;
-        max-width: 1.25rem;
-        color: var(--pink-base);
+        width: 60px;
         margin-inline: 0.75rem;
-        fill: var(--pink-base);
       }
 
       & h1 {
+        display: inline-block;
+        text-wrap: nowrap;
         font-size: 1.5rem;
       }
-      & p {
-        font: normal 0.875rem/1.4;
-      }
     }
+      & div:last-child  {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 3rem;
+        & p {
+        font-size: 0.875rem;
+        font-weight: 100;
+        }
+
+
+      }
   }
 
   & section:nth-child(2) figure {
@@ -43,6 +52,7 @@ main {
     bottom: -100px;
     right: -30px;
     z-index: -1;
+    display: none;
   }
   & img[src*="book"] {
     max-height: 11.75rem;
@@ -51,6 +61,7 @@ main {
   & img[src*="bookmark"] {
     position: absolute;
     max-width: 5rem;
+    display: none;
   }
 
   & img[src*="yellow"] {
@@ -59,6 +70,7 @@ main {
     z-index: -1;
     top: -50px;
     right: 18px;
+    
   }
 
   & img[src*="purple"] {
@@ -66,12 +78,12 @@ main {
     transform: rotate(25deg);
     z-index: -2;
     right: 55px;
+    
   }
 
   & figure span {
     display: none;
     font-size: 0.625rem;
-    
   }
 }
 
@@ -81,8 +93,18 @@ main::after {
   border-radius: 50%;
   width: 298px;
   height: 298px;
-  background: radial-gradient(circle, rgba(63, 15, 65, 0.5) 100%, rgba(255,0,255,0)0%);
+  background: radial-gradient(
+    circle,
+    rgba(63, 15, 65, 0.5) 100%,
+    rgba(255, 0, 255, 0) 0%
+  );
   filter: blur(100px);
   z-index: -3;
-  top:100px;
+  top: 100px;
+}
+
+@keyframes bookmark {
+  to {
+    
+  }
 }
